logs/calibration_reminders_2025-10-01.log
[START] 01/10/2025  9:03:47.13 
Running: venv\Scripts\python.exe manage.py calibration_reminders --days 30 --settings=core.settings_maintenance 
Toplam 3 cihaz için hatýrlatma oluþturulacak (days=30).
Traceback (most recent call last):
  File "C:\dev\bakim_kalibrasyon\manage.py", line 26, in <module>
    main()
  File "C:\dev\bakim_kalibrasyon\manage.py", line 22, in main
    execute_from_command_line(sys.argv)
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\core\management\__init__.py", line 443, in execute_from_command_line
    utility.execute()
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\core\management\__init__.py", line 437, in execute
    self.fetch_command(subcommand).run_from_argv(self.argv)
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\core\management\base.py", line 417, in run_from_argv
    self.execute(*args, **cmd_options)
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\core\management\base.py", line 461, in execute
    output = self.handle(*args, **options)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\dev\bakim_kalibrasyon\maintenance\management\commands\calibration_reminders.py", line 118, in handle
    text_body = render_to_string("maintenance/email/calibration_reminder_email.txt", context)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\template\loader.py", line 62, in render_to_string
    template = get_template(template_name, using=using)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\template\loader.py", line 16, in get_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\template\backends\django.py", line 80, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\template\engine.py", line 178, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\template\engine.py", line 160, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\template\loaders\cached.py", line 58, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\template\loaders\base.py", line 29, in get_template
    return Template(
           ^^^^^^^^^
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\template\base.py", line 155, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\template\base.py", line 197, in compile_nodelist
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\template\base.py", line 519, in parse
    raise self.error(token, e)
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\template\base.py", line 517, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\dev\bakim_kalibrasyon\venv\Lib\site-packages\django\template\defaulttags.py", line 849, in do_for
    raise TemplateSyntaxError(
django.template.exceptions.TemplateSyntaxError: 'for' statements should use the format 'for x in y': for r in items -
ExitCode=1 
[END] 01/10/2025  9:03:52.06 
 
